# CPP_Gstreamer_Template

./: .gitignore  CMakeLists.txt  README.md  gstreamer_wrapper_config.json  vcpkg.json
readme/: readme_gstreamer.md  readme_setup.md
src/: color_util.hpp  file_util.cpp  file_util.hpp  main.cpp
src/gstreamer_wrapper/: gstreamer_wrapper.cpp  gstreamer_wrapper.hpp  gstreamer_wrapper_config.cpp  gstreamer_wrapper_config.hpp
